--- a/pet.html
+++ b/pet.html
@@ -5,17 +5,17 @@
     <title>Pets</title>
   </head>
   <body>
-    <div class="column">
+    <div class="column1">
       <h2>Pet1</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-       eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+       eiusmod tempor <a href="https://www.google.com/">GOOGLE</a> incididunt ut labore et dolore magna aliqua. Ut
        enim ad minim veniam, Duis aute irure dolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        ulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <img src="http://lorempixel.com/400/200" alt="random picture">
     </div>
-    <div class="column">
+    <div class="column2">
       <h2>Pet 2</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
@@ -25,7 +25,7 @@
        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
     <img src="http://lorempixel.com/400/200" alt="random picture">
     </div>
-    <div class="column">
+    <div class="column3">
       <h2>Pet3</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
       eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
