--- a/pet.html
+++ b/pet.html
@@ -9,7 +9,7 @@
       <h2>Pet1</h2>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
        eiusmod tempor <a href="https://www.google.com/">GOOGLE</a> incididunt ut labore et dolore magna aliqua. Ut
-       enim ad minim veniam, Duis aute irure dolor
+       enim ad minim veniam, Duis aute irure doolor
        in reprehenderit in voluptate velit esse cillum dolore eu fugiat
        ulla pariatur. Excepteur sint occaecat cupidatat non proident,
        sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
