--- a/pet.html
+++ b/pet.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
     <title>Pets</title>
   </head>
